# bangumi-crawer

./: .env.template  .gitignore  README.md  openapi-client-config.yaml  pyproject.toml
.cursor/rules/: bangumi-crawer.mdc  uv-usage.mdc
doc/: 01-spec-parsing.md  02-sdk-generation.md  03-cli-usage.md
src/bangumi_crawer/: cli.py  models.py  parser.py  season.py
